# trusty-calculator

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: lib.rs  main.rs  number.rs  parser.rs  utils.rs
tests/: parser.rs  tests.rs
