[package]
name = "trusty-calculator"
version = "0.1.0"
authors = ["Brian Dawn <brian.t.dawn@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.32"
nom = "5.1.2"
clap = "2.33.3"
rustyline = "6.2.0"
dirs = "3.0.1"

[dev-dependencies]
assert_cmd = "1.0.1"
